# ToolEENet

./: LICENSE  README.md
src/dataset_generation/: CMakeLists.txt  package.xml
src/dataset_generation/src/: 2_data_split.py  data_inspection.py  keypoint_visualization.py  pcd_render_with_hand.py  render_call.py  run_collection.sh  urdf_generation.py  visualization.py  visualization_camera_frame.py  visualization_pcd.py  visualization_world_frame.py
src/dataset_generation/src/assets/shadowhand_asset/: grasp_pose.yaml  shadowhand_dict_jonit_name.yaml
src/dataset_generation/src/assets/shadowhand_asset/urdf/: lf_fftip_softcontact.urdf  lf_hand.urdf  lf_hand_biotac.urdf  lf_hand_biotac_nogeom.urdf  lf_hand_biotac_notip.urdf  lf_hand_biotac_simpyfied.urdf  lf_hand_test.urdf  lf_thtip_softcontact.urdf  material.mtl  square_table.urdf  ur10e_lf_hand.urdf  ur10e_lf_hand_biotac.urdf  ur10e_test.urdf  vhacd_log.txt
src/dataset_generation/src/assets/shadowhand_asset/urdf/bio_tac/meshes/biotac/bc/: trans.mlp
src/dataset_generation/src/assets/shadowhand_asset/urdf/bio_tac/meshes/biotac/int_ext_skin/: int_ext_skin_combined_ftw.vtk  int_ext_skin_combined_ftw_1000.tet  int_ext_skin_combined_ftw_1200.tet  int_ext_skin_combined_ftw_2000.tet  int_ext_skin_combined_ftw_500.tet  int_ext_skin_combined_ftw_800.tet
src/dataset_generation/src/assets/shadowhand_asset/urdf/shadowhand/components/f_distal/bt_2p/: process.mlp
src/dataset_generation/src/assets/shadowhand_asset/urdf/test/: lf_fftip_softcontact.urdf  lf_thtip_softcontact.urdf
src/dataset_generation/src/assets/shadowhand_asset/urdf/ur10e/robots/: ur10_lf_hand.urdf
src/dataset_generation/src/assets/shadowhand_asset/urdf/urdf_conf/: ur10_lf_hand.urdf
src/dataset_generation/src/cfg/: config.yaml
src/dataset_generation/src/utils/: file_utils.py  pcd_utils.py  project_utils.py  transform_utils.py
src/pose_annotation/: .gitmodules  CMakeLists.txt  README.md  package.xml
src/pose_annotation/launch/: annotation.launch
src/pose_annotation/scripts/: basic_controls.py  ee_anno.py  model_reorient.py  model_rescale_relocate.py  model_resize.py  pub_tf.py
src/toolee/: .gitignore  CMakeLists.txt  package.xml
src/toolee/configs/: config.py  mrcnn_config.py
src/toolee/datasets/: data_extract_pvnet.py  data_split_ee.py  dataset_toolee.py  extract_ee_pcd.py  extract_ee_pose_prior.py
src/toolee/launch/: affordance_segmentation.launch  inference_service.launch  pose_estimation.launch
src/toolee/mrcnn/: dataset.py  hook.py  main.py  runner.py
src/toolee/networks/: posenet.py  posenet_agent.py
src/toolee/networks/gf_algorithms/: losses.py  samplers.py  scorenet.py  sde.py
src/toolee/networks/pts_encoder/: pointnet2.py
src/toolee/runners/: evaluation_single_ee_pose.py  evaluation_single_obj_pose.py  trainer.py
src/toolee/scripts/: eval_single.sh  inference_node.py  pose_pred_client.py  pose_pred_service.py  result_visualization.py  seg_pred_client.py  seg_pred_service.py  test_affordance_seg.sh  train_score_ee_pose.sh  train_score_ee_pose_symtr.sh  train_score_obj_pose.sh
src/toolee/srv/: PosePred.srv  SegPred.srv
src/toolee/utils/: data_tools.py  datasets_utils.py  file_utils.py  genpose_utils.py  metrics.py  misc.py  operations_3d.py  so3_visualize.py  tracking_utils.py  transform_utils.py  transforms.py  visualize.py
src/toolee/utils/archive/: data_augmentation.py
