<?xml version="1.0"?>
<package format="2">
  <name>dataset_generation</name>
  <version>0.0.0</version>
  <description>dataset_generation</description>

  <maintainer email="yunlong.wang@studium.uni-hamburg.de">1wang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rospy</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>